--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="azdT4FRUn6dqWk6zvtwKccBmrwGXIQmhtnXx0JsRFXk" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="theme-color" content="dark">
     <title> 404 Page not found | PTJ BLOG</title>
